--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongoose": "^5.9.13",
-        "node-cron": "^2.0.3"
+        "node-cron": "^2.0.3",
+        "nodemailer": "^6.4.6"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
