--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@sendgrid/mail": "^7.1.1",
         "axios": "^0.19.2",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "http-status": "^1.4.2",
         "mongoose": "^5.9.13",
         "node-cron": "^2.0.3",
         "nodemailer": "^6.4.6"
