--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "prestart": "npm run swagger",
         "start": "node index.js",
-        "start:dev": "nodemon index.js"
+        "start:dev": "nodemon index.js",
+        "swagger": "node ./swagger.js"
     },
     "keywords": [],
     "author": "",
@@ -21,7 +23,9 @@
         "mongoose": "^5.9.13",
         "node-cron": "^2.0.3",
         "nodemailer": "^6.4.6",
-        "sharp": "^0.25.3"
+        "sharp": "^0.25.3",
+        "swagger-autogen": "^1.2.5",
+        "swagger-ui-express": "^4.1.4"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
